syntax = "proto3";

package projectmanagement;

option java_package = "edu.kit.palladio.proto.projectmanagement";
option java_outer_classname = "ProjectManagementProtos";
option java_multiple_files = true;

message Project{
    string projectId = 1;
}

message Projects{
    repeated Project projects = 1;
}

message CreateProjectResponse{

}
message DeleteProjectResponse{

}

message GetProjectRequest{

}
service ProjectManager{
    rpc createProject(Project) returns (CreateProjectResponse){}
    rpc deleteProject(Project) returns (DeleteProjectResponse){}
    rpc getProject(Project) returns (Project){}
    rpc getProjects(GetProjectRequest) returns (Projects){}
}